# game-rs

./: Cargo.toml
src/: camera.rs  cube.rs  main.rs  shader.wgsl
src/renderer/: attachment.rs  mod.rs  node.rs  scene.rs
