[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# renderer = { path = "renderer" }
winit = "0.26.0"
wgpu = "0.12.0"
bytemuck = "1.7.3"
cgmath = "0.18.0"
env_logger = "0.9.0"
egui = "0.16.1"
pollster = "0.2.5"
raw-window-handle = "0.4.2"
